examples/invalid_scl/type_error_constraint.scl
rel S() :- -(1 + 2)
